# Project-Roguelike

./: .gitignore  CMakeLists.txt  README.md  RLProj.sln
RoTex/: RoTex.vcxproj  RoTex.vcxproj.filters  rotex.cpp  rotex.h  rotex_color.cpp  rotex_color.h  rotex_defs.h  rotex_display.cpp  rotex_display.h  rotex_entity.cpp  rotex_entity.h  rotex_entity_ev.cpp  rotex_entity_ev.h  rotex_err.cpp  rotex_event_handler.cpp  rotex_event_handler.h  rotex_grid_map.cpp  rotex_grid_map.h  rotex_gui_header.cpp  rotex_gui_text.cpp  rotex_loader.cpp  rotex_loader.h  rotex_render.cpp  rotex_render.h  rotex_texture.cpp  rotex_texture.h
RoTex/x64/Debug/: RoTex.dll.recipe  RoTex.ilk  vc143.idb
RoTex/x64/Debug/RoTex.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Roguelike/: Roguelike.vcxproj  Roguelike.vcxproj.filters  cursor.cpp  cursor.h  game_state.h  main.cpp  player.cpp  player.h
Roguelike/Debug/: vc143.idb
Roguelike/Debug/Roguelike.tlog/: Roguelike.lastbuildstate
Roguelike/x64/Debug/: Roguelike.exe.recipe  Roguelike.ilk  vc143.idb
Roguelike/x64/Debug/Roguelike.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Roguelike.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
changes/: 7.9.2025.changelog
cmake/: FindLua.cmake  FindSDL3.cmake  FindSDL3_image.cmake  FindSDL3_ttf.cmake
cmake/SDL3/: SDL3Config.cmake
cmake/SDL3_image/: SDL3_imageConfig.cmake
cmake/SDL3_ttf/: SDL3_ttfConfig.cmake
game/: CMakeLists.txt
game/src/: main.cpp
rotex/: CMakeLists.txt
rotex/include/: rotex.h  rotex_context.h  rotex_defs.h
rotex/src/: rotex.cpp  rotex_context.cpp
rotex/src/display/: rotex_display.cpp
rotex/src/utility/: rotex_err.cpp  rotex_loader.cpp  rotex_log.cpp
x64/Debug/: RoTex.exp  RoTex.lib
